--- a/public/default-get.html
+++ b/public/default-get.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="http://localhost:8089?value=get-value" method="post" enctype="multipart/form-data">
+  <form action="http://localhost:8089/default-get.html" method="post" enctype="multipart/form-data">
       <input> <!-- without name - никуда не отправится -->
       <input name="title">
       <input name="value">
